# miner

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  ADD_ALGORITHM.md  ARCHITECTURE.md  AUTO_START.md  BENCHMARK.md  BUILD.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODING_STYLE.md  EXAMPLES.md  HIVEOS.md  LICENSE  NOTES.md  PARAMETERS.md  POOLS.md  README.md  ROADMAP.md  SMART_MINING.md  dev-xwin-setup.sh  vcpkg.json
miner/: CMakeLists.txt
miner/sources/: CMakeLists.txt  miner.cpp  unit_test.cpp
miner/sources/algo/: CMakeLists.txt  algo_type.cpp  algo_type.hpp  bitwise.hpp  dag_context.hpp  hash.hpp  hash_utils.cpp  hash_utils.hpp  keccak.cpp  keccak.hpp  math.cpp  math.hpp
miner/sources/api/: CMakeLists.txt  api.cpp  api.hpp
miner/sources/common/: CMakeLists.txt  app.hpp  boost_utils.cpp  boost_utils.hpp  cast.hpp  chrono.cpp  chrono.hpp  cli.cpp  cli.hpp  cli_amd.cpp  cli_dev.cpp  cli_device_custom.cpp  cli_device_setting.cpp  cli_kernel.cpp  cli_nvidia.cpp  cli_pool.cpp  cli_pool_custom.cpp  config.cpp  config.hpp  custom.hpp  dashboard.cpp  dashboard.hpp  date.hpp  kernel_generator.cpp  kernel_generator.hpp
miner/sources/device/: CMakeLists.txt  amd.cpp  amd.hpp  device.cpp  device.hpp  device_manager.cpp  device_manager.hpp  nvidia.cpp  nvidia.hpp  type.hpp
miner/sources/network/: CMakeLists.txt  network.cpp  network.hpp
miner/sources/resolver/: CMakeLists.txt  resolver.hpp
miner/sources/statistical/: CMakeLists.txt  statistical.cpp  statistical.hpp
miner/sources/stratum/: CMakeLists.txt  autolykos_v2.cpp  autolykos_v2.hpp  etchash.hpp  ethash.cpp  ethash.hpp  evrprogpow.hpp  job_info.cpp  job_info.hpp  kawpow.cpp  kawpow.hpp  progpow.cpp  progpow.hpp  sha256.cpp  smart_mining.cpp  smart_mining.hpp  stratum.cpp  stratum.hpp  stratums.cpp  stratums.hpp
sources/: CMakeLists.txt  benchmark.cpp  miner.cpp  unit_test.cpp
sources/algo/: CMakeLists.txt  algo_type.cpp  algo_type.hpp  bitwise.hpp  dag_context.hpp  fast_mod.cpp  fast_mod.hpp  hash.hpp  hash_utils.cpp  hash_utils.hpp  keccak.cpp  keccak.hpp  math.cpp  math.hpp  rol.hpp
sources/algo/autolykos/: CMakeLists.txt  autolykos.cpp  autolykos.hpp  autolykos_mhssamadani.cpp  result.hpp
sources/algo/blake3/: CMakeLists.txt  blake3.hpp  blake3_pow.cpp  blake3_pow.hpp  result.hpp
sources/algo/crypto/: CMakeLists.txt  fnv1.cpp  fnv1.hpp  kiss99.cpp
sources/algo/cuckatoo/: blake2b_256.hpp  cuckatoo.hpp  result.hpp
sources/algo/ethash/: CMakeLists.txt  ethash.cpp  ethash.hpp  result.hpp
sources/algo/kheavyhash/: BENCH.md  CMakeLists.txt  hashers.cpp  hashers.hpp  keccak.cpp  keccak.hpp  kheavyhash.cpp  kheavyhash.hpp  matrix.cpp  matrix.hpp  result.hpp  stratum_math.cpp  stratum_math.hpp  types.hpp  xoshiro.hpp
sources/algo/noisy_gemm/: CMakeLists.txt  noisy_gemm.hpp
sources/algo/progpow/: CMakeLists.txt  evrprogpow.cpp  evrprogpow.hpp  firopow.cpp  firopow.hpp  kawpow.cpp  kawpow.hpp  kernel_cuda.cpp  kernel_opencl.cpp  meowpow.cpp  meowpow.hpp  progpow.cpp  progpow.hpp  progpow_quai.cpp  progpow_quai.hpp  quaipow.cpp  quaipow.hpp  result.hpp
sources/algo/random_x/: CMakeLists.txt  argon2d.cpp  argon2d.hpp  result.hpp  superscalar.cpp  superscalar.hpp
sources/algo/tests/: CMakeLists.txt  algo_type.cpp  autolykos.cpp  bitwise.cpp  fast_mod.cpp  hash.cpp  math.cpp  rol.cpp
sources/api/: CMakeLists.txt  api.cpp  api.hpp
sources/benchmark/: CMakeLists.txt  amd.cpp  amd.hpp  benchmark.cpp  benchmark.hpp  benchmark.py  benchmark_nvidia.cpp  benchmark_nvidia_autolykos.cpp  benchmark_nvidia_ethash.cpp  benchmark_nvidia_ethash_light_cache.cpp  benchmark_nvidia_fnv1.cpp  benchmark_nvidia_kawpow.cpp  benchmark_nvidia_keccak.cpp  config.cpp  config.hpp  config.json  nvidia.cpp  nvidia.hpp  result.hpp  workflow.cpp  workflow.hpp
sources/benchmark/amd/: CMakeLists.txt  autolykos_v2.cpp  blake3.cpp  ethash.cpp  ethash_light_cache.cpp  kawpow.cpp  kheavyhash.cpp  progpow.cpp
sources/benchmark/cuda/: CMakeLists.txt  ethash_v0.cu  kernels.hpp
sources/benchmark/nvidia/: CMakeLists.txt  argon2d.cpp  autolykos.cpp  blake2b.cpp  ethash.cpp  ethash_light_cache.cpp  fnv1.cpp  kawpow.cpp  keccak.cpp  noisy_gemm.cpp  random_x.cpp
sources/benchmark/opencl/: CMakeLists.txt
sources/common/: CMakeLists.txt  app.hpp  atomic_counter.hpp  atomic_increment.hpp  atomic_pair.hpp  boost_utils.cpp  boost_utils.hpp  cast.hpp  chrono.cpp  chrono.hpp  cli.cpp  cli.hpp  cli_common.cpp  cli_kernel.cpp  cli_pool.cpp  cli_pool_custom.cpp  cli_smart_mining.cpp  config.cpp  config.hpp  custom.hpp  dashboard.cpp  dashboard.hpp  date.hpp  env_utils.hpp  formater_hashrate.hpp  kernel_generator.cpp  kernel_generator.hpp  number_to_string.hpp  profile.hpp  system.hpp
sources/common/cli/: CMakeLists.txt  cli.cpp  cli.hpp  cli_amd.cpp  (+11 more)
sources/device/: CMakeLists.txt  amd.cpp  amd.hpp  cpu.cpp  cpu.hpp  device.cpp  device.hpp  device_amd.cpp  device_cpu.cpp  device_manager.cpp  device_manager.hpp  device_manager_loop_statistical.cpp  device_nvidia.cpp  mocker.cpp  mocker.hpp  nvidia.cpp  nvidia.hpp  type.hpp
sources/network/: CMakeLists.txt  network.cpp  network.hpp  network_callback.cpp  socks5.hpp  write_pump.cpp  write_pump.hpp
sources/profiler/: CMakeLists.txt  amd.cpp  amd.hpp  nvidia.cpp  nvidia.hpp
sources/resolver/: CMakeLists.txt  mocker.cpp  mocker.hpp  resolver.cpp  resolver.hpp
sources/statistical/: CMakeLists.txt  statistical.cpp  statistical.hpp
sources/stratum/: CMakeLists.txt  autolykos_v2.cpp  autolykos_v2.hpp  blake3.cpp  blake3.hpp  cuckatoo.cpp  cuckatoo.hpp  etchash.cpp  etchash.hpp  ethash.cpp  ethash.hpp  ethash_blake3.cpp  ethash_blake3.hpp  evrprogpow.cpp  evrprogpow.hpp  firopow.cpp  firopow.hpp  job_info.cpp  job_info.hpp  kawpow.cpp  kawpow.hpp  kheavyhash.cpp  kheavyhash.hpp  meowpow.cpp  meowpow.hpp  progpow.cpp  progpow.hpp  progpow_quai.cpp  progpow_quai.hpp  progpow_z.cpp  progpow_z.hpp  quaipow.cpp  quaipow.hpp  random_x.cpp  random_x.hpp  sha256.cpp  sha256.hpp  smart_mining.cpp  smart_mining.hpp  stratum.cpp  (+5 more)
sources/web/: index.css  index.html  index.js
(+639 files in other folders)
